--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="sobre" class="sobre">
         <h2 class="sobre-titulo">Sobre mim</h2>
         <div class="sobre-caixa">
-            <p class="sobre-paragrafo"> Atualmente Estou cursando Programação e, apesar de ainda não ter experiência profissional, 
+            <p class="sobre-paragrafo"> Atualmente estou cursando programação e, apesar de ainda não ter experiência profissional, 
                 já adquiri uma boa base de conhecimento na área. 
                 Busco sempre novos desafios para aplicar o que aprendi e continuar me desenvolvendo. <p>
         </div>
@@ -46,7 +46,9 @@
         <div class="projetos-caixa">
 
             <div class="projetos-card">
-                <img src="img/linkdirecionamentosite.jpeg" alt="projeto 1" class="projetos-imagem">
+                <a href="https://coralinks.netlify.app">
+                    <img src="img/linkdirecionamentosite.jpeg" alt="projeto 1" class="projetos-imagem">
+                </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Link de Direcionamento</h3>
                     <p class="paragrafo-projetos">Um site de links de direcionamento oferece uma maneira eficiente de organizar e 
@@ -56,7 +58,9 @@
             </div>
 
             <div class="projetos-card">
-                <img src="img/Dashboard.jpeg" alt="projeto 2" class="projetos-imagem">
+                <a href="https://walter23-09.github.io/dashboardsimple/">
+                    <img src="img/Dashboard.jpeg" alt="projeto 2" class="projetos-imagem">
+                </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Dashboard</h3>
                     <p class="paragrafo-projetos">Esse Dashboard é bem simples contendo algumas informações sobre
@@ -65,7 +69,9 @@
             </div>
 
             <div class="projetos-card">
-                <img src="img/LojaTenis.jpeg" alt="projeto 3" class="projetos-imagem">
+                <a href="https://walter23-09.github.io/loja-tenis-jordan/#">
+                    <img src="img/LojaTenis.jpeg" alt="projeto 3" class="projetos-imagem">
+                </a>
                 <div class="caixa-textos-projetos">
                     <h3 class="info-projetos">Loja de Tenis Jordan</h3>
                     <p class="paragrafo-projetos"> simples site para compras de Tenis Jordan</p>
